k8s/image-ms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-ms
  template:
    metadata:
      labels:
        app: image-ms
    spec:
      containers:
        - image: rsolinux/image-ms:latest
          name: image-ms
          resources:
            requests:
              cpu: "100m"
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/images/health
              port: server
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /v1/images/health/readiness
              port: server
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:
  name: image-ms
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: image-ms
