k8s/user-ms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-ms
  template:
    metadata:
      labels:
        app: user-ms
    spec:
      containers:
        - image: rsolinux/user-ms:latest
          name: user-ms
          resources:
            requests:
              cpu: "200m"
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/user/health
              port: server
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /v1/user/health/readiness
              port: server
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 2

---

apiVersion: v1
kind: Service
metadata:
  name: user-ms
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: user-ms
