k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v1/ads/*
        backend:
          serviceName: ad-ms
          servicePort: 8080
      - path: /v1/sms/*
        backend:
          serviceName: sms-ms
          servicePort: 8080
      - path: /v1/user/*
        backend:
          serviceName: user-ms
          servicePort: 8080
